Automoc gets regenerated every time a depency changes
Whenever I modify one library (be it within a same project or from the outside, automoc will be triggered and files will get generated, requiring a recompilation of all targets that depend on it directly or indirectly (including all tests) which makes working with it a big hassle.
This didn't use to be the case so I'd expect it to be a regression on the last few versions of cmake.
I'm using -GNinja, it might be a specific issue there.
I'd be willing to put some time to help fix this if someone tells me where to look at.